Added a new page feature.

--- a/encyclopedia/templates/encyclopedia/error.html
+++ b/encyclopedia/templates/encyclopedia/error.html
@@ -5,8 +5,6 @@
 {% endblock %}
 
 {% block body %}
-    <h1>404 Error: Not found</h1>
-
-<p>Could not find entry.</p>
+    <h1>{{ message }}</h1>
 
 {% endblock %}
