--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form method="POST" action=" {% url 'search' %}">
+                <form method="POST" action="{% url 'search' %}">
                     {% csrf_token %}
                     <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
@@ -20,7 +20,7 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="/new">Create New Page</a>
                 </div>
                 <div>
                     Random Page
