Added ability to edit an existing page

--- a/encyclopedia/templates/encyclopedia/title.html
+++ b/encyclopedia/templates/encyclopedia/title.html
@@ -5,8 +5,13 @@
 {% endblock %}
 
 {% block body %}
-    <h1>{{ title }}</h1>
 
 <p> {{entry}} </p>
+
+<form method="POST" action="{% url 'edit' %}">
+    {% csrf_token %}
+    <input type="hidden" name="title" value="{{ title }}">
+    <input type="submit" value="Edit">
+</form>
 
 {% endblock %}
