--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -23,7 +23,7 @@
                     <a href="/new">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'randompage' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
